<resources>
    <string name="app_name">CaojunLibraryV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_assets">Assets Demo</string>
    <string name="menu_pinyin">Pinyin Demo</string>
    <string name="menu_countdown_movie">CountdownMovie Demo</string>
    <string name="menu_currency">Currency Demo</string>
    <string name="menu_time">Time Demo</string>
    <string name="menu_resources">Resources Demo</string>
    <string name="menu_color">Color Demo</string>
    <string name="menu_toast">Toast Demo</string>
    <string name="menu_xlslog">XlsLog Demo</string>
</resources>