<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_assets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_assets" />
        <item
            android:id="@+id/nav_pinyin"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pinyin" />
        <item
            android:id="@+id/nav_countdown_movie"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_countdown_movie" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_currency" />
        <item
            android:id="@+id/nav_time"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_time" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_color"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_color" />
        <item
            android:id="@+id/nav_toast"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_toast" />
        <item
            android:id="@+id/nav_xlslog"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_xlslog" />
    </group>
</menu>