<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.caojun.library.v2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.caojun.library.v2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.caojun.library.v2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
    </fragment>

    <fragment
        android:id="@+id/nav_assets"
        android:name="org.caojun.library.v2.fragment.AssetsFragment"
        android:label="@string/menu_assets"
        tools:layout="@layout/fragment_assets" />

    <fragment
        android:id="@+id/nav_pinyin"
        android:name="org.caojun.library.v2.fragment.PinyinFragment"
        android:label="@string/menu_pinyin"
        tools:layout="@layout/fragment_pinyin" />

    <fragment
        android:id="@+id/nav_countdown_movie"
        android:name="org.caojun.library.v2.fragment.CountdownMovieFragment"
        android:label="@string/menu_countdown_movie"
        tools:layout="@layout/fragment_countdown_movie" />

    <fragment
        android:id="@+id/nav_currency"
        android:name="org.caojun.library.v2.fragment.CurrencyFragment"
        android:label="@string/menu_currency"
        tools:layout="@layout/fragment_currency" />

    <fragment
        android:id="@+id/nav_time"
        android:name="org.caojun.library.v2.fragment.TimeFragment"
        android:label="@string/menu_time"
        tools:layout="@layout/fragment_time" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="org.caojun.library.v2.fragment.ResourcesFragment"
        android:label="@string/menu_resources"
        tools:layout="@layout/fragment_time" />

    <fragment
        android:id="@+id/nav_color"
        android:name="org.caojun.library.v2.fragment.ColorFragment"
        android:label="@string/menu_color"
        tools:layout="@layout/fragment_color" />

    <fragment
        android:id="@+id/nav_xlslog"
        android:name="org.caojun.library.v2.fragment.XlsLogFragment"
        android:label="@string/menu_xlslog"
        tools:layout="@layout/fragment_xlslog" />
</navigation>